[ADD] Two column flex-based row.

--- a/5-objects/_objects.buttons.scss
+++ b/5-objects/_objects.buttons.scss
@@ -97,6 +97,18 @@ $ico-margin:       .9em;
 }
 
 
+/* ===== BUTTON CONTAINERS/WRAPPERS ========================================= */
+
+
+.btns-holder {
+    .lead {
+        font-size: 95%;
+    }
+}
+
+
+
+
 
 /* ===== LINKS ============================================================== */
 
