--- a/5-objects/_objects.grid.scss
+++ b/5-objects/_objects.grid.scss
@@ -273,6 +273,37 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
     @include breakpoint( $mobile-large-and-smaller ) {
         display: block;
     }
+
+    // Two columns in a single row
+    &.two-columns {
+        .column {
+            // 1st column
+            &:first-child {
+                width: 100% * (1 - $two-col-layout-right-ratio );
+                flex: 1 1 auto;
+            }
+
+            // 2nd column
+            &:last-child:not(:first-child) {
+                @include breakpoint( $tablet-and-bigger ) {
+                    width: 100% * $two-col-layout-right-ratio;
+                    margin-left: 2.5em;
+                }
+            }
+        }
+
+        .btns-holder {
+            a {
+                margin-left: 0;
+                margin-right: 0;
+            }
+
+            @include breakpoint( $mobile-large-and-smaller ) {
+                text-align: center;
+                margin-top: 1.5em;
+            }
+        }
+    }
 }
 
 
@@ -298,3 +329,4 @@ $block-mobile-margin-vertical:       $block-margin-vertical / 1.5;
             margin-right: 0;
         }
     }
+
