--- a/5-objects/_objects.dialogs.scss
+++ b/5-objects/_objects.dialogs.scss
@@ -115,7 +115,7 @@ $dialog-padding:   1em;
         -webkit-overflow-scrolling: touch;
         -webkit-animation: ngdialog-flyin .5s;
         animation: ngdialog-flyin .5s;
-        background: #f0f0f0;
+        background: $grey-gallery;
         border-radius: 5px;
         color: #444;
         margin: 160px auto;
