Improves printing styles, adds series of minor enhancements and tweaks (#41)
* [REM] Removes include of the sources to avoid duplications in compiled output CSS.

* [FIX] Makes select2 more flexible and able to wrap when it's too long.

* [ENH] Extends the support for the snappy tabbed navigation to mobile devices.

* [ENH] Wellington promo block with 2+ button styles

* [ENH] Adds bottom margin to the multiple-buttoned wellington promo box

* [ADD] Button for scrolling to the top of the screen.

* [FIX] Selector width win bug

* [ENH] Printing styles improvements

* [ENH] Removes obsolete padding from inside the KIS image.

* [ENH] Enhances margins within entry requirements block.

* [ADD] Two column flex-based row.

* [FIX] Grid boxes are no longer breaking into new line on Chrome.

--- a/6-components/_components.banners.scss
+++ b/6-components/_components.banners.scss
@@ -172,7 +172,10 @@ $banner-separator-colour:   $delim-highlight-bg-colour !default;
         }
 
         .control-group {
-            display: inline-block;
+            max-width: 100%;
+            white-space: normal;
+            display: inline-flex;
+            align-items: center;
 
             &:not(:last-child) {
                 margin-right: .25em;
