--- a/7-trumps/_trumps.plugins.scss
+++ b/7-trumps/_trumps.plugins.scss
@@ -22,12 +22,12 @@ $select2-dropdown-border-colour: $grey-chalice;
 
     /** Selector as a standard link with a caret */
     .pane-controls & {
-        vertical-align: inherit;
+        max-width: 100%;
 
         .select2-selection--single {
             position: relative;     // Resetting caret's vertical position
             height: auto;
-            margin-bottom: .35em;   // Push dropdown down
+            margin-bottom: 0;   // Push dropdown down
             border: 0;
             background-color: transparent;
             color: $link-colour;
@@ -40,9 +40,9 @@ $select2-dropdown-border-colour: $grey-chalice;
         }
 
         .select2-selection__rendered {
-            overflow: initial;
+            //overflow: initial;
+            line-height: 1.2;
             padding-left: .1em;
-            line-height: 1;
             color: inherit;
         }
 
