[ENH] Refactors naming of the summary tile and adjusts margins.

--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -362,7 +362,7 @@ $print-logo-width:          300px;
         a:after { @extend %hide; }
     }
 
-    .quals-listing {
+    .tiles-wide {
         .btn-holder {
             width: 100% !important;
             margin-left: 0 !important;
