--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -17,6 +17,12 @@ $tile-bg:      $grey-gallery;
     > * {
         display: block; // Fixes breaking of the columns to the new line
     }
+
+    &-wide {
+        margin-top: .8em;
+
+        .abstract { margin-bottom: 1em; }
+    }
 }
 
 .tile {
@@ -67,11 +73,11 @@ $tile-bg:      $grey-gallery;
     &:nth-child(odd){ margin-left: 0; }
     &:nth-child(even){ margin-right: 0; }
 
-    /** Tile inside related qualifications listing. */
-    .quals-listing & {
+    /** Full-width (stretched) tiles */
+    .tiles-wide & {
+        display: block;
         clear: both;
 
-        &:first-child { margin-top: .75em; }
         .tile__header { margin: 1em $tile-padding; }
 
         .code {
