--- a/5-objects/_objects.lists.scss
+++ b/5-objects/_objects.lists.scss
@@ -11,6 +11,9 @@ $grid-list-border:          1px solid $darker-border-colour;
 $grid-list-items-per-row:   3;
 
 .grid-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: stretch;
     position: relative;
     @include clearfix();
     margin: 0;
@@ -22,12 +25,18 @@ $grid-list-items-per-row:   3;
         float: left;
         display: block;
 
+        .preview:before{ margin-left: percentage( 1/2 ); }
+
         @include breakpoint( $desktop-and-bigger ) {
             width: 100% / $grid-list-items-per-row;
+
             &:nth-child(3n+1) { clear: left; }
 
             &:nth-child(3n+0) > * { padding-right: 0 }  // Disable padding on the edges
+            &:nth-child(3n+0) .preview:before { margin-left: percentage( 5/6 ); }
+
             &:nth-child(3n-2) > * { padding-left: 0 }   // Disable padding on the edges
+            &:nth-child(3n-2) .preview:before { margin-left: percentage( 1/6 ); }
         }
 
         // Tablet (~ 2 column)
@@ -36,7 +45,10 @@ $grid-list-items-per-row:   3;
             &:nth-child(2n+1) { clear: left; }
 
             &:nth-child(2n+0) > *{ padding-right: 0; }  // Disable padding on the edges
+            &:nth-child(2n+0) .preview:before { margin-left: percentage( 3/4 ); }
+
             &:nth-child(2n-1) > *{ padding-left: 0; }   // Disable padding on the edges
+            &:nth-child(2n-1) .preview:before { margin-left: percentage( 1/4 ); }
         }
 
         // Mobile (~ 1 column)
