[ADD] On-hover underlines for links within Requirements blocks.

--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -88,6 +88,12 @@
         color: $grey-mine-shaft;
     }
 
+    a {
+        @include hoverify() {
+            text-decoration: underline;
+        }
+    }
+
     h3 {
         font-size: 120%;
 
