[ENH] Light adjustments and tweaks in degree overview.

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -23,6 +23,8 @@ $tile-bg:      $grey-gallery;
 
         .abstract { margin-bottom: 1em; }
     }
+
+    .no-lines & { padding-bottom: 0; }
 }
 
 .tile {
