IE11 corrupted height fix, tweaks in detail-overview card (#43)
* [ADD] Heading to the detail-overview card.

* [ADD] On-hover underlines for links within Requirements blocks.

* [ENH] Light adjustments and tweaks in degree overview.

* [FIX] IE11+ height issue fix

--- a/6-components/_components.detail-overview.scss
+++ b/6-components/_components.detail-overview.scss
@@ -29,6 +29,16 @@ $detail-overview-text-size: .9em;
 
     .flexi-block:last-child{ margin-bottom: 0; }
 
+    .flexi-grid > header {
+        width: 100%;
+        margin-bottom: .7em;
+
+        .sub-title {
+            display: block;
+            color: $base-font-colour;
+        }
+    }
+
     h3 {
         margin-bottom:  .6em;
         font-weight:    $weight-semibold;
@@ -96,6 +106,8 @@ $detail-overview-text-size: .9em;
             @include hoverify-underline();
             white-space: nowrap;
         }
+
+        .tooltip-icon { line-height: 0; }
     }
 
     .flexi-block > p:first-child { font-size: inherit; }
@@ -151,6 +163,11 @@ $detail-overview-text-size: .9em;
                 margin-bottom: 1.3em;
             }
         }
+    }
+
+    .btn-holder > a {
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
