--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -248,7 +248,6 @@ $menu-tabbed-underline-size:           4px;
             & > a {
                 color: inherit;
 
-
                 @include hoverify() {
                     color: inherit;
                     background-color: inherit;
@@ -279,6 +278,26 @@ $menu-tabbed-underline-size:           4px;
             > div {
                 display: table-cell;
                 vertical-align: middle;
+            }
+
+
+            @include breakpoint( $mobile-large-and-smaller ) {
+                padding: .6em .35em .5em;
+
+                > div {
+                    max-width: 2.5em;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+
+                .label {
+                    font-size: 85%;
+                    margin-left: 0;
+                    white-space: nowrap;
+                }
+
+                // Icon placed on a single line
+                .ico:before { display: block; margin-bottom: .2em; }
             }
 
             @include hoverify {
@@ -345,11 +364,20 @@ $menu-tabbed-underline-size:           4px;
         }
     }
 
-
-    .sticky-top {
-        box-shadow: rgba(#000, .2) 0 1px 20px;
+    /** Stick to top feature */
+    .panel-sticky {
+        display: block;
         z-index: $z-index-top;
-        @include position( fixed, 0 null null null );
+        position: -webkit-sticky; // Safari
+        position: sticky;
+        top: 0;
+
+        @include clearfix;
+    }
+
+    #tab-content { display: block; }
+
+    .sticky {
         box-shadow: rgba(#000, .2) 0 1px 15px;
         width: 100%;
         border-bottom: 1px solid $block-highlight-border;
@@ -360,14 +388,12 @@ $menu-tabbed-underline-size:           4px;
         }
 
         &.slide-down {
-            //top: 0;
             transition: top .2s ease-in;
         }
     }
 
 
     /** Button 'go to top' */
-
     $btn-up-size: 3.5em;
 
     .btn-up {
@@ -393,6 +419,6 @@ $menu-tabbed-underline-size:           4px;
             background-color: $grey-alto;
         }
 
-        .sticky-top + & { opacity: 1;  }
+        .sticky & { opacity: 1;  }
         .ico { font-size: 150%; }
     }
