[FIX] Removes underline decoration for buttons in requirements blocks.

--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -88,7 +88,7 @@
         color: $grey-mine-shaft;
     }
 
-    a {
+    a:not(.btn) {
         @include hoverify() {
             text-decoration: underline;
         }
