[ENH] show more/less button not underlined, entry-requirements' select2 auto-width

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -320,7 +320,10 @@ $collapsible-transparency-height: 4em;
         margin: 1em 0;
         text-align: center;
 
-        > a { padding: .5em; }
+        > a {
+            padding: .5em;
+            @include hoverify() { text-decoration: none; }
+        }
     }
 
     //.collapsed {}
