--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -24,7 +24,10 @@ $tile-bg:      $grey-gallery;
         .abstract { margin-bottom: 1em; }
     }
 
-    .no-lines & { padding-bottom: 0; }
+    .no-lines & {
+        padding-bottom: 0;
+        padding-top: 0 !important;
+    }
 }
 
 .tile {
@@ -62,6 +65,7 @@ $tile-bg:      $grey-gallery;
         color: $grey-dusty;
         font-weight: $weight-normal;
     }
+
     .code {
         display: block;
         float: right;
@@ -320,7 +324,10 @@ $collapsible-transparency-height: 4em;
         margin: 1em 0;
         text-align: center;
 
-        > a { padding: .5em; }
+        > a {
+            padding: .5em;
+            @include hoverify() { text-decoration: none; }
+        }
     }
 
     //.collapsed {}
@@ -331,7 +338,7 @@ $collapsible-transparency-height: 4em;
             pointer-events: none;
             top: -$collapsible-transparency-height;
             @include size( 100% $collapsible-transparency-height );
-            background: linear-gradient( rgba( #000, 0 ) 0%, white 100% );
+            background: linear-gradient( rgba( white, 0 ) 0%, white 100% );
         }
     }
 }
@@ -496,7 +503,11 @@ $popup-border:   #fff;
 
     // Implies it *MUST BE* used as a block rather than a strip (~nested element)
     &.block-container {
+
+        &:first-child { margin-top: 1.5rem; }
+
         .block {
+            padding-top: 0 !important;
             margin-top: 0;
             margin-bottom: $base-margin;
         }
