--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -88,10 +88,12 @@
         color: $grey-mine-shaft;
     }
 
-    a {
-        @include hoverify() {
-            text-decoration: underline;
-        }
+    a:not(.btn) {
+        @include hoverify() { text-decoration: underline; }
+    }
+
+    .collapsible__control {
+        > a { @include hoverify() { text-decoration: none; } }
     }
 
     h3 {
@@ -136,7 +138,7 @@
         h5 { font-weight: $weight-normal; }
 
         > .list-item {
-            border-bottom: 1px solid #C7C7C7;
+            border-bottom: 1px solid $grey-silver;
             padding: .75em .15em;
 
             &:last-child{ border-bottom: none;  }
