Minor change: show more information links in print view, align left

--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -315,6 +315,10 @@ $print-logo-width:          300px;
         @extend %hide;
     }
 
+    .need-more {
+        text-align: left !important;
+    }
+
     .block,
     .intro {
         padding: $print-margin !important;
