[fix] removed 2 blocks from @print, added 1 block to @print

--- a/3-generic/_generic.print.scss
+++ b/3-generic/_generic.print.scss
@@ -308,6 +308,7 @@ $print-logo-width:          300px;
     // Hide stuff we don't need to print
     .site-header,
     .cover-holder,
+    .course-overview-two-col,
     .cover-overlay,
     .slide-show-block,
     .intro .subtitle,
